infra/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: adguard
spec:
  selector:
    app: adguard
  ports:
    - name: ui
      port: 80
      targetPort: 80
    - name: setup
      port: 3000
      targetPort: 3000
